add styles and media query for app.tsx

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,57 +1,179 @@
 .header {
   display: flex;
   justify-content: space-between;
-  margin: 10px 0 50px;
+  align-items: center;
+  margin: 10px 0 70px;
 
-  .title {
-    font-size: 60px;
-    font-weight: 300;
+  .logoBLock {
+    display: flex;
+    gap: 10px;
+    align-items: center;
+
+    .title {
+      max-width: 600px;
+      font-size: 60px;
+      letter-spacing: 2px;
+      font-weight: 300;
+    }
+
+    .icon {
+      width: 70px;
+    }
   }
 
-  .info {
+  .infoBlock {
     display: flex;
     align-items: center;
-    flex-direction: column;
-    font-size: 35px;
+    gap: 20px;
+
+    .price {
+      font-size: 30px;
+    }
   }
 
   .btn {
-    margin-top: 20px;
-    padding: 10px 16px;
-    background-color: #ff4d6d;
+    padding: 12px 26px;
+    background: none;
     color: #fff;
     font-size: 16px;
     font-weight: bold;
-    border: none;
-    border-radius: 6px;
+    border: 2px solid #3139ce;
+    border-radius: 16px;
     cursor: pointer;
     transition: background 0.2s ease-in-out;
 
     &:hover {
-      background-color: #e04360;
+      background-color: #3139ce;
     }
   }
 }
 
 .table {
-  display: flex;
-  justify-content: center;
   font-size: 25px;
-  border-collapse: separate;
-  border-spacing: 70px 45px;
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+
+  tr th {
+    padding: 0 5px;
+  }
 
   tr td {
     text-align: center;
   }
 
-  tbody .asset {
+  .asset {
+    transition: background 0.2s ease-in-out;
+  }
+
+  .asset td {
+    padding: 25px;
+  }
+
+  .asset:hover {
     cursor: pointer;
+    background-color: #363659;
   }
 
   .priceUp {
-    color: green;
+    color: #5dd9bd;
   }
   .priceDown {
-    color: red;
+    color: #ff3b3b;
+  }
+}
+
+@media (max-width: 1200px) {
+  .header {
+    .logoBLock {
+      .title {
+        text-align: center;
+        width: 275px;
+      }
+
+      .icon {
+        width: 100px;
+      }
+    }
+
+    .infoBlock {
+      flex-direction: column;
+    }
+  }
+}
+
+@media (max-width: 1024px) {
+  .header {
+    .logoBLock {
+      .title {
+        font-size: 45px;
+        width: 200px;
+      }
+
+      .icon {
+        width: 70px;
+      }
+    }
+
+    .infoBlock {
+      flex-direction: column;
+    }
+  }
+
+  .table {
+    font-size: 22px;
+
+    .asset td {
+      padding: 15px;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    flex-direction: column;
+    margin-bottom: 40px;
+
+    .logoBLock {
+      .title {
+        font-size: 35px;
+        width: 100%;
+      }
+
+      .icon {
+        width: 50px;
+      }
+    }
+
+    .infoBlock {
+      margin-top: 20px;
+
+      .price {
+        font-size: 25px;
+      }
+    }
+  }
+
+  .table {
+    font-size: 16px;
+
+    .asset td {
+      padding: 10px;
+    }
+  }
+}
+
+@media (max-width: 425px) {
+  .header {
+    .logoBLock {
+      .title {
+        font-size: 30px;
+        width: 100%;
+      }
+
+      .icon {
+        width: 50px;
+      }
+    }
   }
 }
