--- a/src/components/modal/Modal.module.scss
+++ b/src/components/modal/Modal.module.scss
@@ -11,27 +11,23 @@
 
   .modal {
     width: 600px;
-    background-color: #fff;
+    background-color: #25253d;
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 15px;
 
     .input {
-      width: 100%;
+      width: 50%;
       padding: 10px 15px;
       margin-bottom: 15px;
       border: 1px solid #ccc;
-      border-radius: 6px;
+      border-radius: 10px;
       font-size: 16px;
       outline: none;
       transition: all 0.2s ease-in-out;
 
       &:focus {
-        border-color: #ff69b4;
-        box-shadow: 0 0 5px rgba(255, 105, 180, 0.5);
-      }
-
-      &::placeholder {
-        color: #aaa;
+        border-color: #3139ce;
+        box-shadow: 0 0 5px rgba(49, 57, 206, 0.8);
       }
     }
 
@@ -48,49 +44,102 @@
         gap: 75px;
         margin-bottom: 10px;
         text-align: center;
+        transition: background 0.2s ease-in-out;
 
         span {
           display: flex;
           flex: 1 1;
+        }
+
+        &:hover {
+          cursor: pointer;
+          background-color: #363659;
         }
       }
     }
 
     .selectedCoin {
       display: flex;
+      letter-spacing: 2px;
       font-size: 28px;
       margin: 20px 0;
       gap: 10px;
       justify-content: center;
     }
+
+    .btnBlock {
+      display: flex;
+      justify-content: space-around;
+
+      .btn {
+        padding: 12px 26px;
+        background: none;
+        color: #fff;
+        font-size: 25px;
+        font-weight: bold;
+        border: 2px solid #3139ce;
+        border-radius: 16px;
+        cursor: pointer;
+        transition: background 0.2s ease-in-out;
+
+        &:hover {
+          background-color: #3139ce;
+        }
+      }
+    }
+
+    .priceUp {
+      color: green;
+    }
+    .priceDown {
+      color: red;
+    }
   }
+}
 
-  .btnBlock {
-    display: flex;
-    justify-content: space-around;
+@media (max-width: 768px) {
+  .overlayStyles {
+    .modal {
+      margin: 15px;
+      max-width: 600px;
 
-    .btn {
-      margin-top: 20px;
-      padding: 10px 16px;
-      background-color: #ff4d6d;
-      color: #fff;
-      font-size: 30px;
-      font-weight: bold;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.2s ease-in-out;
+      .listCoins {
+        font-size: 18px;
 
-      &:hover {
-        background-color: #e04360;
+        .coinItem {
+          gap: 35px;
+        }
+      }
+      .selectedCoin {
+        font-size: 18px;
       }
     }
   }
+}
 
-  .priceUp {
-    color: green;
-  }
-  .priceDown {
-    color: red;
+@media (max-width: 425px) {
+  .overlayStyles {
+    .modal {
+      max-width: 600px;
+
+      .input {
+        padding: 5px 15px;
+      }
+
+      .listCoins {
+        font-size: 14px;
+
+        .coinItem {
+          gap: 35px;
+        }
+      }
+
+      .btnBlock {
+        .btn {
+          font-size: 18px;
+          padding: 5px 26px;
+        }
+      }
+    }
   }
 }
